bynkc/tests/fixtures/negative/158_lambda_arity_mismatch/input.bynk
commons bad

fn apply(f: Int -> Int, x: Int) -> Int {
  f(x)
}

fn misuse() -> Int {
  apply((a, b) => a + b, 5)
}
